external-crates/move/crates/move-compiler/tests/move_check/typing/void_struct_field.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: legacy
  lint: false
---
warning[W09002]: unused variable
  ┌─ tests/move_check/typing/void_struct_field.move:4:13
  │
4 │         let b = Box { f: abort 0 };
  │             ^ Unused local variable 'b'. Consider removing or prefixing with an underscore: '_b'
  │
  = This warning can be suppressed with '#[allow(unused_variable)]' applied to the 'module' or module member ('const', 'fun', or 'struct')

error[E04004]: expected a single non-reference type
  ┌─ tests/move_check/typing/void_struct_field.move:4:17
  │
4 │         let b = Box { f: abort 0 };
  │                 ^^^^^^^^^^^^^^^^^^
  │                 │        │
  │                 │        Expected a base type, but this type diverges
  │                 Invalid type argument
